# agent-safe-guard

./: .gitignore  .gitmodules  AST.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.env  nfpm.yaml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: distribution-roadmap.md  memory-safety.md  packaging-plan.md  policy-catalog-console-plan.md  repomap.md  rule-engine-architecture.md
hooks/: permission-request  post-tool-use  pre-compact  pre-tool-use  read-compress  read-guard  session-end  session-start  stop  subagent-start  subagent-stop  tool-error
hooks/lib/: common.sh
native/: CMakeLists.txt  README.md
native/include/sg/: catalog_rule_compiler.hpp  client_runtime.hpp  json_extract.hpp  policy_bridge.hpp  policy_catalog.hpp  policy_permission_request.hpp  policy_post_tool_use.hpp  policy_pre_compact.hpp  policy_pre_tool_use.hpp  policy_read_compress.hpp  policy_read_guard.hpp  policy_repomap.hpp  policy_secrets.hpp  policy_session_end.hpp  policy_session_start.hpp  policy_state.hpp  policy_stats.hpp  policy_stop.hpp  policy_subagent_start.hpp  policy_subagent_stop.hpp  policy_tool_error.hpp  process.hpp  protocol.hpp  repomap_format.hpp  repomap_index.hpp  repomap_parser.hpp  repomap_service.hpp  repomap_store.hpp  rss_watchdog.hpp  rule_audit.hpp  rule_engine.hpp  rule_types.hpp  systemd_notify.hpp  transport.hpp
native/queries/: javascript-tags.scm  typescript-tags.scm
native/src/clients/: permission_request_main.cpp  post_tool_use_main.cpp  pre_compact_main.cpp  pre_tool_use_main.cpp  read_compress_main.cpp  read_guard_main.cpp  session_end_main.cpp  session_start_main.cpp  stop_main.cpp  subagent_start_main.cpp  subagent_stop_main.cpp  tool_error_main.cpp
native/src/daemon/: main.cpp
native/src/native/: catalog_rule_compiler.cpp  client_runtime.cpp  json_extract.cpp  policy_bridge.cpp  policy_catalog.cpp  policy_permission_request.cpp  policy_post_tool_use.cpp  policy_pre_compact.cpp  policy_pre_tool_use.cpp  policy_read_compress.cpp  policy_read_guard.cpp  policy_repomap.cpp  policy_secrets.cpp  policy_session_end.cpp  policy_session_start.cpp  policy_state.cpp  policy_stats.cpp  policy_stop.cpp  policy_subagent_start.cpp  policy_subagent_stop.cpp  policy_tool_error.cpp  process.cpp  protocol.cpp  repomap_format.cpp  repomap_index.cpp  repomap_parser.cpp  repomap_service.cpp  repomap_store.cpp  rss_watchdog.cpp  rule_audit.cpp  rule_engine.cpp  systemd_notify.cpp  transport.cpp
native/src/tools/: asg_cli_main.cpp  asg_install_main.cpp  asg_repomap_main.cpp  asg_statusline_main.cpp  asg_uninstall_main.cpp
native/tests/: repomap_unit_tests.cpp
scripts/: native-dev-loop.sh
systemd/: sgd.service  sgd.socket
tests/: coverage-trace.sh  parse-coverage.sh
tests/fixtures/repomap/js-minimal/: util.js
tests/fixtures/repomap/ts-crossref/: api.ts  auth.ts  gateway.ts
tests/fixtures/repomap/ts-minimal/: auth.ts
tests/integration/: asg_cli.bats  install_uninstall.bats  native_rule_audit.bats  permission_request.bats  post_tool_use.bats  pre_tool_use.bats  read_compress.bats  read_guard.bats  repomap.bats  repomap_session.bats  session_lifecycle.bats  statusline.bats  subagent_lifecycle.bats  tool_error.bats
tests/test_helper/: common.bash
tests/unit/: common_sh.bats
